# dlt_demos

./: .gitignore  Handle_JSON_normalization_and_schema_evolution.ipynb  README.md  pdf_to_weaviate.ipynb  personio_demo.ipynb  pyproject.toml  schema_evolution.ipynb  spotlight_demo.ipynb  sql_to_weaviate.ipynb  unstructured_weaviate_pipeline.py  zendesk_to_weaviate.ipynb
.dlt/: config.toml
altinity-demo/: README.md  github_api_pipeline.py  requirements.txt
coinpaprika-to-postgresql/: README.md
datahub-demo/: README.md  dlt_to_datahub.py  requirements.txt  rest_api_pipeline.py
dlt-dagster-snowflake/: README.md  pyproject.toml  requirements.txt
dlt-dbt-cloud/: .gitignore  README.md
dlt-debezium-demo/: .gitignore  DOCKER_USAGE.md  Dockerfile  MYSQL.md  README.md  config_helper_universal.py  debezium_dlt_loader.py  debezium_dlt_loader_mysql.py  docker-compose.yml  requirements.txt
dlt-exa-websets/: exa_notebook.py  pipeline.py
dlt-init-openapi-demo/: README.md
dlt-lancedb-github-search/: etl_01_extract_from_bigquery_github_archive.py  etl_02_enrich_github_repos_with_descriptions_from_parallel.py  etl_03_embed_and_load_to_lancedb.py  models.py  nb_01_github_stars.py  nb_02_parallel_enrichment.py  nb_03_lancedb_search.py  pyproject.toml  readme.md
dlt-lancedb-github-search/.dlt/: config.toml
dlt_dagster_snowflake/: pyproject.toml
dlt_restack_demo/: README.md
dlt_restack_demo/restack-app/: .env.Example  .gitignore  Dockerfile  README.md  pyproject.toml  schedule_workflow.py
dlt_restack_demo/restack-app/.dlt/: config.toml  example.secrets.toml
dlt_restack_demo/restack-app/src/: client.py  services.py
dlt_restack_demo/restack-app/src/functions/: dlt_to_weaviate.py  function.py  vector_search.py
dlt_restack_demo/restack-app/src/workflows/: workflow.py
geopolitical-hormuz-dashboard/: .gitignore  README.md  geopolitical_dashboard.py
iceberg-tabular/: README.md  github_pipeline.py  move_data_to_tabular.py  requirements.txt
onotlogy-demo/: .claudeignore  .gitignore  README.md  jaffle_api.py  pyproject.toml
ontology-benchmark/: CDM_bare.dbml  README.md  findings.md  generate_responses_md.py  ontology.md  responses.md  results.json  run_benchmark.py
pydata-belgrade-demo/: dlt_pipeline.py
pydata_belgrade_demo/: .gitignore  README.md  dlt_pipeline_merged.py  requirements.txt
pyladies-2024-demo/: README.md  getting-started.py  github_pipeline.py  poke_pipeline.py  (+3 more)
(+47 files in other folders)
