[tool.poetry]
name = "weaviate-demo"
version = "0.1.0"
description = ""
authors = ["AstrakhantsevaAA <astra92293@gmail.com>"]
readme = "README.md"
packages = [{include = "weaviate_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
