[project]
name = "restack-app"
version = "0.0.1"
description = "A quickstart for Restack with dlt"
authors = [{ name = "Restack Team", email = "service@restack.io" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "pydantic>=2.10.6",
    "watchfiles>=1.0.4",
    "python-dotenv==1.0.1",
    "openai>=1.61.0",
    "restack-ai>=0.0.62",
    "dlt>=1.5.0",
    "weaviate-client==3.22"
]

[project.scripts]
dev = "src.services:watch_services"
services = "src.services:run_services"

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"